--- a/websocketclient/config.json
+++ b/websocketclient/config.json
@@ -1,5 +1,6 @@
 {
     "ws_server": ["wss://lb-1.exptech.dev/websocket"],
     "select_ws_server": 0,
-    "ws_send_server": {}
+    "ws_send_server": {},
+    "log_show": true
   }
